--- a/src/app/pages/dashboard/accordion-matchs/accordion-matchs.component.html
+++ b/src/app/pages/dashboard/accordion-matchs/accordion-matchs.component.html
@@ -1,11 +1,14 @@
 <nb-accordion>
   <nb-accordion-item (collapsedChange)="toggleBackground($event,match)">
     <nb-accordion-item-header [class.selected]="isSelected(match)">
-        <p style="font-size:20px; font-weight:bold;">{{match.homeTeam}} - {{match.awayTeam}}</p>
+        <div style="text-align: center;">
+          <p style="font-size:20px; font-weight:bold;">{{match.homeTeam}} - {{match.awayTeam}}</p>
+          <p>{{ match.Date_match | date:'HH:mm'}}</p>
+        </div>
         <div style="display:flex; justify-content:center; align-items:center;">
           <div style="text-align:center; margin-right:20px;">
             <div style="margin-bottom: 5px;">1</div>
-            <button nbButton [status]="match.predi === 0 ? 'primary' : 'basic'">{{match.home_max}}</button>
+            <button nbButton [status]="match.predi === 2 ? 'primary' : 'basic'">{{match.home_max}}</button>
           </div>
           <div style="text-align:center; margin-right:20px;">
             <div style="margin-bottom: 5px;">X</div>
@@ -13,9 +16,14 @@
           </div>
           <div style="text-align:center;">
             <div style="margin-bottom: 5px;">2</div>
-            <button nbButton [status]="match.predi === 2 ? 'primary' : 'basic'">{{match.away_max}}</button>
+            <button nbButton [status]="match.predi === 0 ? 'primary' : 'basic'">{{match.away_max}}</button>
           </div>
         </div>
       </nb-accordion-item-header>
+      <nb-accordion-item-body>
+        <div style="display:flex; justify-content:center; align-items:center;">
+          <a href={{match.link}} target="_blank">Check odds</a>
+        </div>
+      </nb-accordion-item-body>
 </nb-accordion-item>
 </nb-accordion>
