--- a/src/app/pages/stats/stats.component.html
+++ b/src/app/pages/stats/stats.component.html
@@ -5,5 +5,14 @@
       <button  nbButton (click)="getData()" status="success">Success</button>
     </nb-card-body>
 </nb-card>
-<advanced-example-server></advanced-example-server>
+
+<div class="col-lg-6">
+  <nb-card>
+    <nb-card-header>Courbe des résultats</nb-card-header>
+    <nb-card-body>
+      <ngx-timeline></ngx-timeline>
+    </nb-card-body>
+    
+  </nb-card>
+</div>
 <ngx-echarts-pie></ngx-echarts-pie>
