--- a/src/app/pages/stats/timeline/timeline.component.html
+++ b/src/app/pages/stats/timeline/timeline.component.html
@@ -1,1 +1,1 @@
-<p>timeline works!</p>
+<div echarts [options]="options" [merge]="mergeOption" [loading]="loading" class="chart" (chartInit)="getData()"></div>
