--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -10,20 +10,26 @@
   </nb-select>
 </div>
 
-<div class="header-container">
-  <nb-actions size="small">
 
-    <nb-action class="control-item">
-      <nb-search type="rotate-layout"></nb-search>
-    </nb-action>
-    <nb-action class="control-item" icon="email-outline"></nb-action>
-    <nb-action class="control-item" icon="bell-outline"></nb-action>
-    <nb-action class="user-action" *nbIsGranted="['view', 'user']" >
-      <nb-user [nbContextMenu]="userMenu"
-               [onlyPicture]="userPictureOnly"
-               [name]="user?.name"
-               [picture]="user?.picture">
-      </nb-user>
-    </nb-action>
-  </nb-actions>
+
+  <div *ngIf="authenticated" class="header-container">
+    <nb-actions size="small">
+  
+      <nb-action class="control-item">
+        <nb-search type="rotate-layout"></nb-search>
+      </nb-action>
+      <nb-action class="control-item" icon="email-outline"></nb-action>
+      <nb-action class="control-item" icon="bell-outline"></nb-action>
+      <nb-action class="user-action" *nbIsGranted="['view', 'user']" >
+        <nb-user [nbContextMenu]="userMenu"
+                 [onlyPicture]="userPictureOnly"
+                 [name]="user?.name"
+                 [picture]="user?.picture">
+        </nb-user>
+      </nb-action>
+    </nb-actions>
+  </div>
+<div *ngIf="!authenticated" class="header-container" >
+  <!-- Display UI elements for non-authenticated users here -->
+  <button nbButton status = primary (click)="redirectToLogin()">Login</button>
 </div>
