--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -19,26 +19,35 @@
     text-align: right;
   }
 
-  #left{
+#left {
     background-color: blue;
   }
 
-  .win_droite.size-medium.status-primary{
-    width: 50%; border-right: solid white; --progress-bar-primary-filled-background-color: #edf1f7; --progress-bar-primary-background-color: #35496d;
+  .win_droite.size-medium.status-primary {
+    width: 50%; border-right: solid white; 
+    --progress-bar-primary-filled-background-color: #edf1f7;
+    --progress-bar-primary-background-color: #35496d;
   }
-  .loss_droite.size-medium.status-primary{
-    width: 50%; border-right: solid white; --progress-bar-primary-filled-background-color: #edf1f7; --progress-bar-primary-background-color: #598bff;
+  .loss_droite.size-medium.status-primary {
+    width: 50%; border-right: solid white; 
+    --progress-bar-primary-filled-background-color: #edf1f7;
+    --progress-bar-primary-background-color: #598bff;
   }
-  .nul_droite.size-medium.status-primary{
-    width: 50%; border-right: solid white; --progress-bar-primary-filled-background-color: #edf1f7; --progress-bar-primary-background-color: #35496d;
+  .nul_droite.size-medium.status-primary {
+    width: 50%; border-right: solid white; 
+    --progress-bar-primary-filled-background-color: #edf1f7; 
+    --progress-bar-primary-background-color: #35496d;
   }
 
-  .win_gauche.size-medium.status-primary{
-    width: 50%; --progress-bar-primary-filled-background-color: #598bff; --progress-bar-primary-background-color: #edf1f7;
+  .win_gauche.size-medium.status-primary {
+    width: 50%; --progress-bar-primary-filled-background-color: #598bff; 
+    --progress-bar-primary-background-color: #edf1f7;
   }
-  .loss_gauche.size-medium.status-primary{
-    width: 50%; --progress-bar-primary-filled-background-color: #35496d; --progress-bar-primary-background-color: #edf1f7;
+  .loss_gauche.size-medium.status-primary {
+    width: 50%; --progress-bar-primary-filled-background-color: #35496d; 
+    --progress-bar-primary-background-color: #edf1f7;
   }
-  .nul_gauche.size-medium.status-primary{
-    width: 50%; --progress-bar-primary-filled-background-color: #35496d; --progress-bar-primary-background-color: #edf1f7;
+  .nul_gauche.size-medium.status-primary {
+    width: 50%; --progress-bar-primary-filled-background-color: #35496d; 
+    --progress-bar-primary-background-color: #edf1f7;
   }
