--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,19 +1,32 @@
 <div>
   <div>
     <nb-card>
-      <nb-card-header>Using the Grid</nb-card-header>
+      <nb-card-header>Change profil infos</nb-card-header>
       <nb-card-body>
-        <form (ngSubmit)="changes(inputName.value,newPicture.value)">
+        <nb-alert *ngIf="!ok && showMessages" outline="danger" role="alert">
+          <p class="alert-title"><b>Oh snap!</b></p>
+          <ul class="alert-message-list">
+            <li class="alert-message">Something when wrong.</li>
+          </ul>
+        </nb-alert>
+        
+        <nb-alert *ngIf="ok && showMessages" outline="success" role="alert">
+          <p class="alert-title"><b>Hooray!</b></p>
+          <ul class="alert-message-list">
+            <li class="alert-message">It worked</li>
+          </ul>
+        </nb-alert>
+        <form *ngIf="user?.id_leagues" (ngSubmit)="changes(inputName.value,newPicture.value)">
           <div class="form-group row">
             <label for="inputName" class="label col-sm-3 col-form-label">Username</label>
             <div class="col-sm-9">
-              <input type="text" nbInput fullWidth id="inputName" #inputName [value]="userName">
+              <input type="text" nbInput fullWidth id="inputName" #inputName [value]="user.userName">
             </div>
           </div>
           <div class="form-group row">
             <label for="inputPicture" class="label col-sm-3 col-form-label">Picture link</label>
             <div class="col-sm-9">
-              <input type="link" nbInput fullWidth id="inputPicture" #newPicture [value]="picture">
+              <input type="link" nbInput fullWidth id="inputPicture" #newPicture [value]="user.picture">
             </div>
           </div>
           <div class="form-group row">
@@ -33,11 +46,8 @@
           <div class="form-group row">
             <label class="col-sm-3 label">Championnats</label>
             <div class="col-sm-9">
-              <nb-select multiple placeholder="Choix des leagues à afficher">
-                <nb-option value="1">Option 1</nb-option>
-                <nb-option value="2">Option 2</nb-option>
-                <nb-option value="3">Option 3</nb-option>
-                <nb-option value="4">Option 4</nb-option>
+              <nb-select multiple placeholder="Choix des leagues à afficher" (selectedChange)="onSelected($event)" [selected] = "leagues" style ="min-width: 100%;">
+                <nb-option *ngFor="let league of all_leagues" [value]="league" >{{league}}</nb-option>
               </nb-select>
             </div>
           </div>
