--- a/src/app/pages/dashboard/accordion-matchs/accordion-matchs.component.html
+++ b/src/app/pages/dashboard/accordion-matchs/accordion-matchs.component.html
@@ -27,6 +27,9 @@
             <button nbButton [status]="match.predi === 0 && match.FTR === 3 ? 'primary' : match.predi === 0 && match.FTR === 0 ? 'success' : match.predi === 0 && match.FTR !== 0? 'danger' : 'basic'">{{match.away_max}}</button>
           </div>
         </div>
+        <p style="font-size: small; font-style: italic; position: relative;">
+          <span style="position: absolute; bottom: 0; right: 0;">{{match.date_maj}}</span>
+        </p>
       </nb-accordion-item-header>
       <nb-accordion-item-body>
         <div style="display:flex; justify-content:center; align-items:center;">
