--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -53,3 +53,16 @@
   --progress-bar-primary-filled-background-color: #35496d;
   --progress-bar-primary-background-color: #edf1f7;
  }
+
+.parametres {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+@media (max-width: 768px) {
+  .parametres {
+    flex-direction: column;
+    align-items: center;
+  }
+}
