--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -53,7 +53,7 @@
             <label class="col-sm-3 label">Cotes</label>
             <div class="col-sm-9">
               <h5>Range: {{rangeValues[0] + ' - ' + rangeValues[1]}}</h5>
-              <p-slider [(ngModel)]="rangeValues" [range]="true" [step] = "0.1"></p-slider>
+              <p-slider [(ngModel)]="rangeValues" [range]="true" [min] = 1 [max] =10 [step] = "0.1"></p-slider>
             </div>
           </div>
           <div class="form-group row">
