--- a/src/app/pages/dashboard/accordion-matchs/accordion-matchs.component.html
+++ b/src/app/pages/dashboard/accordion-matchs/accordion-matchs.component.html
@@ -17,16 +17,20 @@
           <div style="text-align:center; margin-right:20px;">
             <div style="margin-bottom: 5px;">1</div>
             <button nbButton [status]="match.predi === 2 && match.FTR === 3 ? 'primary' : match.predi === 2 && match.FTR === 2 ? 'success' : match.predi === 2 && match.FTR !== 2? 'danger' : 'basic'">{{match.home_max}}</button>
+            <div style="margin-bottom: 5px;">{{match.home_pred}}</div>
           </div>
           <div style="text-align:center; margin-right:20px;">
             <div style="margin-bottom: 5px;">X</div>
             <button nbButton [status]="match.predi === 1 && match.FTR === 3 ? 'primary' : match.predi === 1 && match.FTR === 1 ? 'success' : match.predi === 1 && match.FTR !== 1? 'danger' : 'basic'">{{match.draw_max}}</button>
+            <div style="margin-bottom: 5px;">{{match.draw_pred}}</div>
           </div>
           <div style="text-align:center;">
             <div style="margin-bottom: 5px;">2</div>
             <button nbButton [status]="match.predi === 0 && match.FTR === 3 ? 'primary' : match.predi === 0 && match.FTR === 0 ? 'success' : match.predi === 0 && match.FTR !== 0? 'danger' : 'basic'">{{match.away_max}}</button>
+            <div style="margin-bottom: 5px;">{{match.away_pred}}</div>
           </div>
         </div>
+    
         <p style="font-size: small; font-style: italic; position: relative;">
           <span style="position: absolute; bottom: 0; right: 0;">{{match.date_maj}}</span>
         </p>
